# bitcoinsilver_core

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  LICENSE  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  index.html  inwork.html  libbitcoinconsensus.pc.in  libbitcoinsilverconsensus.pc.in
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml  gui_issue.yml
.github/workflows/: c-cpp.yml  ci.yml
.tx/: config
assets/css/: main.css
assets/js/: main.js
build-aux/m4/: bitcoin_silver_find_bdb48.m4  bitcoin_silver_qt.m4  bitcoin_silver_subdir_to_include.m4  bitcoinsilver_find_bdb48.m4  bitcoinsilver_qt.m4  bitcoinsilver_subdir_to_include.m4
build_msvc/: .gitignore  README.md  bitcoin_silver.sln  bitcoin_silver_config.h  bitcoinsilver.sln  bitcoinsilver_config.h.in  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
build_msvc/bench_bitcoinsilver/: bench_bitcoinsilver.vcxproj.in
build_msvc/bitcoin-cli/: bitcoin_silver-cli.vcxproj
build_msvc/bitcoin-qt/: bitcoin_silver-qt.vcxproj
ci/: lint_imagefile  lint_run_all.sh  test_run_all.sh
ci/lint/: 04_install.sh  (+2 more)
contrib/: README.md  bitcoin_silver-cli.bash-completion  bitcoin_silver-tx.bash-completion  bitcoin_silverd.bash-completion  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp
contrib/devtools/bitcoinsilver-tidy/: CMakeLists.txt  README  bitcoinsilver-tidy.cpp  example_logprintf.cpp  logprintf.cpp  logprintf.h
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitcoin_silver-conf.md  bitcoinsilver-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gitian-building.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  (+6 more)
doc/man/: Makefile.am  bitcoin_silver-cli.1  bitcoin_silver-qt.1  bitcoin_silver-tx.1  bitcoin_silver-util.1  bitcoin_silver-wallet.1  bitcoin_silverd.1  bitcoinsilver-cli.1  bitcoinsilver-qt.1  bitcoinsilver-tx.1  bitcoinsilver-util.1  bitcoinsilver-wallet.1  bitcoinsilverd.1
share/: genbuild.sh  setup.nsi.in
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.h  bip324.cpp  bip324.h  bitcoin_silver-cli-res.rc  bitcoin_silver-cli.cpp  bitcoin_silver-tx-res.rc  bitcoin_silver-tx.cpp  bitcoin_silver-util-res.rc  bitcoin_silver-util.cpp  bitcoin_silver-wallet-res.rc  bitcoin_silver-wallet.cpp  bitcoin_silverd-res.rc  bitcoin_silverd.cpp  bitcoinsilver-chainstate.cpp  bitcoinsilver-cli-res.rc  (+146 more)
test/: README.md  config.ini.in  get_previous_releases.py
(+1568 files in other folders)
