dist_man1_MANS=

if BUILD_BITCOIN_SILVERD
  dist_man1_MANS+=bitcoin_silverd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoin_silver-qt.1
endif

if BUILD_BITCOIN_SILVER_CLI
  dist_man1_MANS+=bitcoin_silver-cli.1
endif

if BUILD_BITCOIN_SILVER_TX
  dist_man1_MANS+=bitcoin_silver-tx.1
endif

if BUILD_BITCOIN_SILVER_UTIL
  dist_man1_MANS+=bitcoin_silver-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_SILVER_WALLET
  dist_man1_MANS+=bitcoin_silver-wallet.1
endif
endif
