dist_man1_MANS=

if BUILD_BITCOINSILVERD
  dist_man1_MANS+=bitcoinsilverd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoinsilver-qt.1
endif

if BUILD_BITCOINSILVER_CLI
  dist_man1_MANS+=bitcoinsilver-cli.1
endif

if BUILD_BITCOINSILVER_TX
  dist_man1_MANS+=bitcoinsilver-tx.1
endif

if BUILD_BITCOINSILVER_UTIL
  dist_man1_MANS+=bitcoinsilver-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOINSILVER_WALLET
  dist_man1_MANS+=bitcoinsilver-wallet.1
endif
endif
